force-app/main/default/objects/Case/fields/All_Opportunity_Numbers__c.field-meta.xml
<CustomField>
    <fullName>All_Opportunity_Numbers__c</fullName>
    <description>If the field &quot;Multiple Opportunities?&quot; is checked, this field must be filled</description>
    <inlineHelpText>If the field &quot;Multiple Opportunities?&quot; is checked, this field must be filled</inlineHelpText>
    <label>All Opportunity Numbers</label>
    <type>TextArea</type>
</CustomField>