force-app/main/default/objects/Case/fields/Approved_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Ship_Date__c</fullName>
    <label>Approved Ship Date</label>
    <type>Date</type>
</CustomField>