force-app/main/default/objects/Case/fields/ARC_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>ARC_Opportunity_ID__c</fullName>
    <formula>ARC_Proposal_ID__r.Arc_Proposal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARC Opportunity ID</label>
    <type>Text</type>
</CustomField>