force-app/main/default/objects/Case/fields/ARC_Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>ARC_Proposal_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ARC Proposal ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Cases_ARC_Proposal_ID</relationshipName>
    <type>Lookup</type>
</CustomField>