force-app/main/default/objects/Case/fields/Auto_Approval_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Process_Status__c</fullName>
    <label>Auto Approval Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>