force-app/main/default/objects/Case/fields/Case_Contains_Custom_Materials__c.field-meta.xml
<CustomField>
    <fullName>Case_Contains_Custom_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Contains Custom Materials</label>
    <type>Checkbox</type>
</CustomField>