force-app/main/default/objects/Case/fields/CRMG_WF__Today__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Today__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Date</type>
</CustomField>