force-app/main/default/objects/Case/fields/Customer_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Type__c</fullName>
    <label>Customer Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
                <default>true</default>
                <label>Problem</label>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>