force-app/main/default/objects/Case/fields/Customer_s_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Experience__c</fullName>
    <label>Customer&apos;s Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>