force-app/main/default/objects/Case/fields/Days_Between_Delivery_and_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Delivery_and_Reporting__c</fullName>
    <formula>DATEVALUE(CreatedDate) - Order_Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Delivery and Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>