force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC Press</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Operations - Assembly</fullName>
            </value>
            <value>
                <fullName>Operations - Fulfilment</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>PD Scheduling</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
                <label>Printer/Supplier</label>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Order Entry</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Digital Fulfillment</fullName>
            </value>
            <value>
                <fullName>3rd Party Rostering</fullName>
            </value>
            <value>
                <fullName>Back Orders</fullName>
                <isActive>false</isActive>
                <label>Back Orders</label>
            </value>
            <value>
                <fullName>Bent Cover</fullName>
                <isActive>false</isActive>
                <label>Bent Cover</label>
            </value>
            <value>
                <fullName>Bill To</fullName>
                <isActive>false</isActive>
                <label>Bill To</label>
            </value>
            <value>
                <fullName>Binding falling apart</fullName>
                <isActive>false</isActive>
                <label>Binding falling apart</label>
            </value>
            <value>
                <fullName>Books Falling Apart</fullName>
                <isActive>false</isActive>
                <label>Books Falling Apart</label>
            </value>
            <value>
                <fullName>Broken</fullName>
                <isActive>false</isActive>
                <label>Broken</label>
            </value>
            <value>
                <fullName>Broken Baskets</fullName>
                <isActive>false</isActive>
                <label>Broken Baskets</label>
            </value>
            <value>
                <fullName>Broken/mixed up</fullName>
                <isActive>false</isActive>
                <label>Broken/mixed up</label>
            </value>
            <value>
                <fullName>CC instead of TEKS</fullName>
                <isActive>false</isActive>
                <label>CC instead of TEKS</label>
            </value>
            <value>
                <fullName>CCSS Colloquium</fullName>
                <isActive>false</isActive>
                <label>CCSS Colloquium</label>
            </value>
            <value>
                <fullName>Camden Purchasing Dept.</fullName>
                <isActive>false</isActive>
                <label>Camden Purchasing Dept.</label>
            </value>
            <value>
                <fullName>Conference</fullName>
                <isActive>false</isActive>
                <label>Conference</label>
            </value>
            <value>
                <fullName>Conference Session/Workshop</fullName>
                <isActive>false</isActive>
                <label>Conference Session/Workshop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>