force-app/main/default/objects/Case/fields/Do_we_have_all_details_to_ship__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_all_details_to_ship__c</fullName>
    <inlineHelpText>number of schools, grades, location, etc</inlineHelpText>
    <label>Do we have all details to ship?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>