force-app/main/default/objects/Case/fields/Do_we_have_the_PO__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_the_PO__c</fullName>
    <label>Do we have the PO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>