force-app/main/default/objects/Case/fields/Helpscout_ID__c.field-meta.xml
<CustomField>
    <fullName>Helpscout_ID__c</fullName>
    <label>Helpscout ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>