force-app/main/default/objects/Case/fields/ICRM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Account_ID__c</fullName>
    <label>ICRM_Account_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>