force-app/main/default/objects/Case/fields/ICRM_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Assigned_Date__c</fullName>
    <label>ICRM Assigned Date</label>
    <type>Date</type>
</CustomField>