force-app/main/default/objects/Case/fields/ICRM_closed_date__c.field-meta.xml
<CustomField>
    <fullName>ICRM_closed_date__c</fullName>
    <label>ICRM closed date</label>
    <type>Date</type>
</CustomField>