force-app/main/default/objects/Case/fields/ICRM_create_date__c.field-meta.xml
<CustomField>
    <fullName>ICRM_create_date__c</fullName>
    <label>ICRM create date</label>
    <type>Date</type>
</CustomField>