force-app/main/default/objects/Case/fields/ICRM_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Ticket_ID__c</fullName>
    <label>ICRM_Ticket_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>