force-app/main/default/objects/Case/fields/Is_there_flexibility_in_the_product__c.field-meta.xml
<CustomField>
    <fullName>Is_there_flexibility_in_the_product__c</fullName>
    <label>Is there flexibility in the product?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>