force-app/main/default/objects/Case/fields/Is_this_event_scheduled_and_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_this_event_scheduled_and_confirmed__c</fullName>
    <description>If the &quot;Reason for Exception&quot; is &quot;PD Event&quot;, this field must be filled</description>
    <inlineHelpText>If the &quot;Reason for Exception&quot; is &quot;PD Event&quot;, this field must be filled</inlineHelpText>
    <label>Is this event scheduled and confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>