force-app/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <description>Ticket Area renamed to Issue</description>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Issue</fullName>
            </value>
            <value>
                <fullName>Book Content</fullName>
            </value>
            <value>
                <fullName>Books Falling Apart</fullName>
            </value>
            <value>
                <fullName>Damaged Product</fullName>
            </value>
            <value>
                <fullName>Duplicate Product</fullName>
            </value>
            <value>
                <fullName>Incomplete Product</fullName>
            </value>
            <value>
                <fullName>Invoice Problems</fullName>
            </value>
            <value>
                <fullName>Labeling Error</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Missing Product</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Spectrum Error</fullName>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
            <value>
                <fullName>Digital Reporting</fullName>
            </value>
            <value>
                <fullName>Rostering</fullName>
            </value>
            <value>
                <fullName>Software Bug</fullName>
            </value>
            <value>
                <fullName>14/004DG</fullName>
                <isActive>false</isActive>
                <label>14/004DG</label>
            </value>
            <value>
                <fullName>ARC Press</fullName>
                <isActive>false</isActive>
                <label>ARC Press</label>
            </value>
            <value>
                <fullName>ARC Press Distribution</fullName>
                <isActive>false</isActive>
                <label>ARC Press Distribution</label>
            </value>
            <value>
                <fullName>Back Orders</fullName>
                <isActive>false</isActive>
                <label>Back Orders</label>
            </value>
            <value>
                <fullName>Binders</fullName>
                <isActive>false</isActive>
                <label>Binders</label>
            </value>
            <value>
                <fullName>Broken</fullName>
                <isActive>false</isActive>
                <label>Broken</label>
            </value>
            <value>
                <fullName>Broken Baskets</fullName>
                <isActive>false</isActive>
                <label>Broken Baskets</label>
            </value>
            <value>
                <fullName>CCSS Colloquium</fullName>
                <isActive>false</isActive>
                <label>CCSS Colloquium</label>
            </value>
            <value>
                <fullName>Company Description</fullName>
                <isActive>false</isActive>
                <label>Company Description</label>
            </value>
            <value>
                <fullName>Conference</fullName>
                <isActive>false</isActive>
                <label>Conference</label>
            </value>
            <value>
                <fullName>Conference Session/Workshop</fullName>
                <isActive>false</isActive>
                <label>Conference Session/Workshop</label>
            </value>
            <value>
                <fullName>Correct quantities not sent</fullName>
                <isActive>false</isActive>
                <label>Correct quantities not sent</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>