force-app/main/default/objects/Case/fields/Items_Requested__c.field-meta.xml
<CustomField>
    <fullName>Items_Requested__c</fullName>
    <label>Items Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>