force-app/main/default/objects/Case/fields/Minimum_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Required__c</fullName>
    <description>If the field &quot;Is there flexibility in the product?&quot; is &quot;Yes&quot;, this field must be filled</description>
    <inlineHelpText>If the field &quot;Is there flexibility in the product?&quot; is &quot;Yes&quot;, this field must be filled</inlineHelpText>
    <label>Minimum Required</label>
    <type>TextArea</type>
</CustomField>