force-app/main/default/objects/Case/fields/Multiple_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Opportunities?</label>
    <type>Checkbox</type>
</CustomField>