force-app/main/default/objects/Case/fields/No_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Ship_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Ship Date</label>
    <type>Checkbox</type>
</CustomField>