force-app/main/default/objects/Case/fields/Number_of_Shipping_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shipping_Locations__c</fullName>
    <label>Number of Shipping Locations</label>
    <length>10</length>
    <type>Text</type>
</CustomField>