force-app/main/default/objects/Case/fields/Order_Paid_For__c.field-meta.xml
<CustomField>
    <fullName>Order_Paid_For__c</fullName>
    <label>Order Paid For?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Awaiting Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>