force-app/main/default/objects/Case/fields/Order_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Ship_Date__c</fullName>
    <label>Order Ship Date</label>
    <type>Date</type>
</CustomField>