force-app/main/default/objects/Case/fields/Original_PO__c.field-meta.xml
<CustomField>
    <fullName>Original_PO__c</fullName>
    <label>Original PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>