force-app/main/default/objects/Case/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <inlineHelpText>Customer concern history or backstory</inlineHelpText>
    <label>Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>