force-app/main/default/objects/Case/fields/Over_90_Day_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Over_90_Day_Approval_Status__c</fullName>
    <label>Over 90 Day Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>