force-app/main/default/objects/Case/fields/PO_Need_By_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Need_By_Date__c</fullName>
    <label>PO Need By Date</label>
    <type>Date</type>
</CustomField>