force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Ticket Category name changed to product</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>Basket Label/Book Theme Sticker</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Core Text</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Individual Title</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>SchoolPace</fullName>
            </value>
            <value>
                <fullName>Skills Card</fullName>
            </value>
            <value>
                <fullName>Take Home Kit</fullName>
            </value>
            <value>
                <fullName>Toolkit</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>eLibraries</fullName>
            </value>
            <value>
                <fullName>SchoolPace Connect/eBundles</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>ARC Adventures</fullName>
                <isActive>false</isActive>
                <label>ARC Adventures</label>
            </value>
            <value>
                <fullName>ARC Press Distribution</fullName>
                <isActive>false</isActive>
                <label>ARC Press Distribution</label>
            </value>
            <value>
                <fullName>ARC Web Site</fullName>
                <isActive>false</isActive>
                <label>ARC Web Site</label>
            </value>
            <value>
                <fullName>Accts. Payable</fullName>
                <isActive>false</isActive>
                <label>Accts. Payable</label>
            </value>
            <value>
                <fullName>Advertisement</fullName>
                <isActive>false</isActive>
                <label>Advertisement</label>
            </value>
            <value>
                <fullName>American Rdg. At Home</fullName>
                <isActive>false</isActive>
                <label>American Rdg. At Home</label>
            </value>
            <value>
                <fullName>Banner</fullName>
                <isActive>false</isActive>
                <label>Banner</label>
            </value>
            <value>
                <fullName>Books Falling Apart</fullName>
                <isActive>false</isActive>
                <label>Books Falling Apart</label>
            </value>
            <value>
                <fullName>Certificate</fullName>
                <isActive>false</isActive>
                <label>Certificate</label>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core Text</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Customer satisfaction</fullName>
                <isActive>false</isActive>
                <label>Customer satisfaction</label>
            </value>
            <value>
                <fullName>Customized Promotional Materials</fullName>
                <isActive>false</isActive>
                <label>Customized Promotional Materials</label>
            </value>
            <value>
                <fullName>Damaged Product/Box</fullName>
                <isActive>false</isActive>
                <label>Damaged Product/Box</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>