force-app/main/default/objects/Case/fields/Reason_for_Exception__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Exception__c</fullName>
    <label>Reason for Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Deadline</fullName>
            </value>
            <value>
                <fullName>Implementation Start</fullName>
            </value>
            <value>
                <fullName>PD Event</fullName>
            </value>
            <value>
                <fullName>Revenue Shortfall</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Sales Event/Conference</fullName>
            </value>
            <value>
                <fullName>Sales Presentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>