force-app/main/default/objects/Case/fields/Reason_for_Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Exception_Date__c</fullName>
    <description>If the field &quot;Request for Exception&quot; is &quot;Funding Deadline, Implementation Start, PD Event, Sales Event/Conference, Sales Presentation&quot;, this field must be filled.</description>
    <inlineHelpText>If the field &quot;Request for Exception&quot; is &quot;Funding Deadline, Implementation Start, PD Event, Sales Event/Conference, Sales Presentation&quot;, this field must be filled.</inlineHelpText>
    <label>Reason for Exception Date</label>
    <type>Date</type>
</CustomField>