force-app/main/default/objects/Case/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <type>AutoNumber</type>
</CustomField>