force-app/main/default/objects/Case/fields/Requested_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Provision_Date__c</fullName>
    <description>Date for digital materials to be provisioned</description>
    <label>Requested Provision Date</label>
    <type>Date</type>
</CustomField>