force-app/main/default/objects/Case/fields/Split_Description__c.field-meta.xml
<CustomField>
    <fullName>Split_Description__c</fullName>
    <description>If the field &quot;Will the opportunity(s) need to be split?&quot; is &quot;Yes&quot;, this field must be filled</description>
    <inlineHelpText>If the field &quot;Will the opportunity(s) need to be split?&quot; is &quot;Yes&quot;, this field must be filled</inlineHelpText>
    <label>Split Description</label>
    <type>TextArea</type>
</CustomField>