force-app/main/default/objects/Case/fields/Waiting_On__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On__c</fullName>
    <label>Waiting On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on RVP Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Sales Ops Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Demand Processing</fullName>
            </value>
            <value>
                <fullName>Waiting on Ops</fullName>
            </value>
            <value>
                <fullName>Waiting on Sales</fullName>
            </value>
            <value>
                <fullName>Waiting on Finance</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Waiting on CI</fullName>
            </value>
            <value>
                <fullName>Waiting on CI - Production</fullName>
            </value>
            <value>
                <fullName>Waiting on Digital Fulfillment</fullName>
            </value>
            <value>
                <fullName>Waiting on Returns</fullName>
            </value>
            <value>
                <fullName>Waiting on Software Development</fullName>
            </value>
            <value>
                <fullName>Waiting on Over 90 Day Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Sales Ops</fullName>
            </value>
            <value>
                <fullName>Waiting on Digital Ops</fullName>
            </value>
            <value>
                <fullName>Waiting on CI - Operations</fullName>
            </value>
            <value>
                <fullName>Waiting on Receiving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>