force-app/main/default/objects/Case/fields/When_do_we_expect_the_PO__c.field-meta.xml
<CustomField>
    <fullName>When_do_we_expect_the_PO__c</fullName>
    <description>If the field &quot;Do we have the PO?&quot; is &quot;No&quot;, this field must be filled</description>
    <inlineHelpText>If the field &quot;Do we have the PO?&quot; is &quot;No&quot;, this field must be filled</inlineHelpText>
    <label>When do we expect the PO?</label>
    <type>TextArea</type>
</CustomField>