force-app/main/default/objects/Case/fields/When_will_we_have_all_details_to_ship__c.field-meta.xml
<CustomField>
    <fullName>When_will_we_have_all_details_to_ship__c</fullName>
    <description>If the field &quot;Do we have all details to ship?&quot; ​is &quot;No&quot;, this field must be filled</description>
    <inlineHelpText>If the field &quot;Do we have all details to ship?&quot; ​is &quot;No&quot;, this field must be filled</inlineHelpText>
    <label>When will we have all details to ship?</label>
    <type>TextArea</type>
</CustomField>