force-app/main/default/objects/Case/fields/Will_the_opportunity_s_need_to_be_split__c.field-meta.xml
<CustomField>
    <fullName>Will_the_opportunity_s_need_to_be_split__c</fullName>
    <label>Will the opportunity(s) need to be split</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>